--- a/Margadarshan_frontend/package.json
+++ b/Margadarshan_frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
