--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan_directory
 spring.datasource.username=margadarshan
 spring.datasource.password=margadarshan
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
