backend for universities (#31)

--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan_directory
-spring.datasource.username=margadarshan
-spring.datasource.password=margadarshan
+spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
+spring.datasource.username=root
+spring.datasource.password=root1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
