About Us Page Complete

--- a/Margadarshan_frontend/Margadarshan_frontend/package.json
+++ b/Margadarshan_frontend/Margadarshan_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "margadarshan_frontend",
+  "name": "margadarshan-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
