--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
 spring.datasource.username=root
-spring.datasource.password=cerebralcorpse00
+spring.datasource.password=root1234
 
 # add the path where you want to store the images
 upload.path = Margadarshan-backend/images
