--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
 spring.datasource.username=root
-spring.datasource.password=cerebralcorpse00
+spring.datasource.password=root1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# add the path where you want to store the images
+upload.path = Margadarshan-backend/images
+upload.path = Margadarshan_frontend/public
+
+
+
