--- a/Margadarshan_frontend/package.json
+++ b/Margadarshan_frontend/package.json
@@ -22,8 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
-    "swiper": "^11.0.5",
-    "react-toastify": "^9.1.3"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
