--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
 spring.datasource.username=root
-spring.datasource.password=1234567
+spring.datasource.password=root1234
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -9,6 +9,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # add the path where you want to store the images
 upload.path = Margadarshan-backend/images
 upload.path = Margadarshan_frontend/public
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=margadarshan2024@gmail.com
+spring.mail.password=tzmq hqlx vywa sozm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
