--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
 upload.path = Margadarshan-backend/images
-# upload.path = Margadarshan_frontend/public
+upload.path = Margadarshan_frontend/public
 
 
 spring.mail.host=smtp.gmail.com
