--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-upload.path = Margadarshan-backend/images
-upload.path = Margadarshan_frontend/public
+#upload.path = Margadarshan-backend/images
+#upload.path = Margadarshan_frontend/public
+upload.path = /Users/dell/Desktop/Margadarshan/Margadarshan/Margadarshan-backend/images
 
 
 spring.mail.host=smtp.gmail.com
@@ -17,6 +18,3 @@ spring.mail.username=margadarshan2024@gmail.com
 spring.mail.password=tzmq hqlx vywa sozm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-
