--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
 spring.datasource.username=root
-spring.datasource.password=Root1234
+spring.datasource.password=1234567
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-upload.path = Margadarshan-backend/images
+# upload.path = Margadarshan-backend/images
 upload.path = Margadarshan_frontend/public
 
 
@@ -17,6 +17,3 @@ spring.mail.username=margadarshan2024@gmail.com
 spring.mail.password=tzmq hqlx vywa sozm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-
