--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
 spring.datasource.username=root
-spring.datasource.password=1234567
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.password=root1234
+spring.jpa.hibernate.ddl-auto =update
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
