--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-# upload.path = Margadarshan-backend/images
+#upload.path = Margadarshan-backend/images
 upload.path = Margadarshan_frontend/public
-
+upload.path = /Users/dell/Desktop/Margadarshan/Margadarshan/Margadarshan-backend/images
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
