--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-#upload.path = Margadarshan-backend/images
+upload.path = Margadarshan-backend/images
 upload.path = Margadarshan_frontend/public
 upload.path = /Users/dell/Desktop/Margadarshan/Margadarshan/Margadarshan-backend/images
 
