--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
+spring.datasource.url=jdbc:mysql://localhost:3306/margadarshantest3
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto =update
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-upload.path = Margadarshan-backend/images
+#upload.path = Margadarshan-backend/images
 upload.path = Margadarshan_frontend/public
 upload.path = /Users/dell/Desktop/Margadarshan/Margadarshan/Margadarshan-backend/images
 
