--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/margadarshan
-spring.datasource.username=root
-spring.datasource.password=Root1234
+spring.datasource.url=jdbc:mysql://localhost:3306/ 
+# add your  database name here
+spring.datasource.username=
+# add  your username here
+spring.datasource.password=
+# add  your password here
+spring.jpa.hibernate.ddl-auto = create-drop
 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-upload.path = Margadarshan-backend/images
-# upload.path = Margadarshan_frontend/public
+# upload.path = 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -16,6 +21,3 @@ spring.mail.username=margadarshan2024@gmail.com
 spring.mail.password=tzmq hqlx vywa sozm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-
