--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=
 # add  your username here
 spring.datasource.password=
 # add  your password here
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # add the absolute path where you want to store the images
-# upload.path = 
+upload.path = margadarshan_frontend/public
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
