--- a/Margadarshan-backend/src/main/resources/application.properties
+++ b/Margadarshan-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ 
-# add your  database name here
-spring.datasource.username=
-# add  your username here
-spring.datasource.password=
-# add  your password here
+spring.datasource.url = jdbc:mysql://localhost:3306/
+# add your database name here
+spring.datasource.username =
+# add your username here
+spring.datasource.password =
+# add your password here
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.defer-datasource-initialization=true
@@ -12,8 +12,10 @@ spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# add the absolute path where you want to store the images
-upload.path = Margadarshan_frontend/public
+# add the absolute path of this location
+# (Margadarshan/Margadarshan_frontend/public/document)
+# if it is not working
+upload.path = /Margadarshan/Margadarshan_frontend/public/document
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
